--- a/css/first_try.css
+++ b/css/first_try.css
@@ -1,1 +1,20 @@
-aaaaaaaaa
+#test2
+{
+    color:aquamarine;
+    text-align: center;
+}
+.center2
+{
+    color:blue;
+}
+body
+{
+    background-color:#b0c4de;
+}
+#imgbox
+{
+    margin-left: 200px;
+    display: table-cell;
+    vertical-align: middle;
+    text-align:center;
+}
